@@ -1,5 +1,9 @@
 *SVN*
 
+* Added config.plugins to control which plugins are loaded #6269 [skaes]. By default, everything in vendor/plugins will be loaded, but if you specify config.plugins, only those will be loaded. Example:
+
+    config.plugins = %w[ routing_navigator simply_helpful ]
+
 * Clean up html on included error pages. [Tim Lucas]
 
 * Fixed default 404.html and 500.htmls to remove extreme ugliness and include human language [DHH]
